# smavg

./: .gitignore  AGENTS.md  AGENT_MANUAL.md  ATTRIBUTION.md  BENCHMARKS.md  CHANGELOG.md  CLI_REFERENCE.md  COMMERCIAL.md  CONTRIBUTING.md  CONTRIBUTOR_TERMS.md  DAEMON.md  FAQ.md  FORMAT.md  INSTALL.md  LEGAL_NOTES.md  LICENSE  LICENSE_SUMMARY.md  MCP.md  NOTICE  PLUGIN.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SAFETY.md  SECURITY.md  SKILL.md  START_HERE.md  TRADEMARK.md  TRUST.md  USER_MANUAL.md  pyproject.toml
assets/: README.md
benchmarks/: 2026-05-09-container-v1.md  2026-05-09-gauntlet-v1.md  2026-05-09-luau-history-pack.md  2026-05-09-planner-v1-gauntlet.md  2026-05-10-gauntlet-tree-v1.md  2026-05-10-history-pack-v3.md  2026-05-10-memory-bounded-container-v1.md  2026-05-11-context-v1.md  2026-05-11-history-pack-v4.md  2026-05-11-reliability-pass-v1.md  2026-05-11-token-use-test-v1.md  2026-05-11-workflow-context-v1.md  2026-05-16-codex-ab-gauntlet-v1.md  2026-05-16-codex-workload-gauntlet-v1.md  2026-05-16-gate-gauntlet-v1.md  2026-05-16-smavg-mcp-v1.md  2026-05-16-smavg-preflight-v1.md  2026-05-16-x-post-workflow-token-test-v1.md  2026-05-17-benefit-ledger-v1.md  2026-05-17-cleanup-quarantine-v1.md  2026-05-18-smavg-work-mode-v1.md  2026-05-18-surface-gauntlet-v1.md  2026-05-20-daemon-plugin-v1.md  2026-05-20-trust-wall-v1.md
mcp/: smavg-mcp.json
plugin/: README.md  manifest.json
scripts/: build-plugin.sh  run-tests.sh  verify-release.sh
tests/: test_autopilot.py  test_codex_gauntlet.py  test_container.py  test_context.py  (+17 more)
(+59 files in other folders)
